<resources>
    <string name="app_name">Paste</string>
    <string name="app_ver">1.2.3.R.425574c</string>
    <string name="app_tips">Made With Love  ❤</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="fragment_1">General</string>
    <string name="fragment_2">Entrance</string>
    <string name="fragment_3">help</string>
    <string name="fragment_4">Appearance</string>
    <string name="copy">Copy</string>
    <string name="restart">Restarting</string>
    <string name="other">Other</string>
    <string name="maintain">Maintain</string>
    <string name="word"> Words</string>
    <string name="image_word_single"> Image</string>
    <string name="image_word_double"> Images</string>
    <string name="year"> Year</string>
    <string name="month"> Month</string>
    <string name="day"> Day</string>
    <string name="hour"> Hour</string>
    <string name="minute"> Minute</string>
    <string name="now">Now</string>
    <string name="ago"> Ago</string>
    <string name="category_word">Word</string>
    <string name="category_color">Color</string>
    <string name="category_phone">phone</string>
    <string name="restart_to_aplay">Restart to make it works</string>
    <string name="restart_content">To restart APP?</string>
    <string name="restarting">Restarting, you need to wait at most 5 seconds</string>
    <string name="webview_error">No Available Browers</string>
    <string name="toast_tip1">Have been granted</string>
    <string name="search_menu1">     Copy     </string>
    <string name="search_menu2">    Collect    </string>
    <string name="draw_overlay">Require Overlay Permission</string>
    <string name="copied">Copied</string>
    <string name="saved">Saved</string>
    <string name="emptyview">Nothing Here</string>
    <string name="accessibility_service_description">Used to collect app\'s package name to get icon and name.</string>
    <string name="active_error">Fail to active, wrong key</string>
    <string name="express1">Is this a express number?</string>
    <string name="express2">A wrong number or no internet?</string>
    <string name="express3">Searching</string>
    <string name="express4">No record</string>
    <string name="title_bl">BlackList</string>
    <string name="no_voice_input">No Voice Input Settings, please check your manufacturer.</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="lock_noti">Lock current clipdata</string>
    <string name="append_noti">Click again to stop appending</string>
    <string name="noRoot">Not Rooted, Will Work As Mode Accessibility</string>
    <string name="changelog">ChangeLog</string>
    <string name="menu_sort_defalut">Sort by default</string>
    <string name="menu_sort_time">Sort by time</string>
    <string name="menu_sort_time_desc">Sort by time (desc)</string>
    <string name="sms_copied">Identifying code has been sent to Paste floatwindow</string>
    <string name="edit_tips">Detected Accessibility Service Permission Off, the original card will not been deleted.
    </string>
    <string name="channel_service">Paste Service</string>
    <string name="channel_images_processing">Processing Images</string>
    <string name="image_processing">Processing Images</string>
    <string name="image_processing_desc">Scaling and saving images, please try to open Paste\'s Clipboard later …
    </string>
    <string name="why_title">Why we need this permission?</string>
    <string name="why_content">Because we need your phone\'s ID to register, but this ID can only been read after we get permission. We will not do any other things.</string>
    <string name="permission_title1">Accessibility Permission isn\'t granted</string>
    <string name="permission_content1">Paste can not catch icon and name of the app you copy from. For the best experience, this Notification will keep showing before you turn it on.</string>
    <string name="permission_title2">You just swipe up the card</string>
    <string name="permission_content2">This feature can help you paste content to the currently position and ignore a lot of noisy actions! but it is also a fact of Android Fragmentation. \n\n<b>For Accessibility User</b>, this feature can only work at certain places.  \n\n<b>For Root user but android version is under Android 7</b>, this feature can only work when paste English and Math. \n\n<b>If you are Root User and on Android 7 or above</b>, congraduation, this feature has no limited.</string>
    <string name="turnon_access">Turn On</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="base_permission">Fail to get Permissions</string>
    <string name="base_permission_sub">You may need to grant these permission manually</string>
    <string name="tester_welcome_title">Welcome</string>
    <string name="tester_welcome_content">Now you have joint Paste Beta Group. <b>You now have full access to any function of app. </b>This is still a very early access but i have done most of the core functions. Any bugs or requests please contact developer derectly. Thanks for your contribution</string>
    <string name="under_development">Still Under Development</string>
    <string name="service_temp">Service is working</string>
    <string name="student_made_tip">Have no money to develop cloud service</string>
    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>
    <string name="nav_billing">Billing</string>
    <string name="app_off">You need to TURN ON to set</string>
    <string name="quicklook_permission">Permission</string>
    <string name="quicklook_database">Data Base</string>
    <string name="quick_service">Service</string>
    <string name="quick_cloud">Cloud</string>
    <string name="appearance_title">Appearance  Settings</string>
    <string name="appearance_modes">Working Modes</string>
    <string name="appearance_modes_sub">Choose a method to work</string>
    <string name="appearance_card_modes">Card Appearances</string>
    <string name="appearance_card_modes_sub">Choose a card\'s appearance</string>
    <string name="appearance_cardnum">Card Number</string>
    <string name="appearance_cardnum_dialog_title">Input</string>
    <string name="appearance_cardnum_dialog_content">Custom your card number. <b>Please be awarded that setting the number too large will have no benefit to the whole system.</b> You can\'t use them all but they will cost your device\'s memory</string>
    <string name="appearance_colorful_background">Colorful Backgound</string>
    <string name="appearance_colorful_backgound_sub">Render colorful backgound</string>
    <string name="appearance_default_color">Default Color</string>
    <string name="appearance_default_color_content">Pick your own color</string>
    <string name="appearance_picking_method">Picking Methods</string>
    <string name="appearance_picking_method_sub">Different color algorihms</string>
    <string name="appearance_nav_access">Show Button in Nav Bar</string>
    <string name="appearance_nav_access_sub">Android Oreo new feature</string>
    <string name="service_title">Service</string>
    <string name="service_autoboot">Start Service After Booting</string>
    <string name="service_autoboot_sub">Auto start service</string>
    <string name="service_restart">Restart Service</string>
    <string name="service_restart_sub">Refresh to notification</string>
    <string name="notification_title">Notification</string>
    <string name="notification_show">Show Notification</string>
    <string name="notification_show_content">It can help Paste to daemon</string>
    <string name="notification_entrance">Enable Notification Entrance</string>
    <string name="notification_entrance_sub">poping up window by clicking notification</string>
    <string name="notification_clip">Show Clipdata In Notificaiton</string>
    <string name="notification_clip_sub">Watch clipdata quicker and easier</string>
    <string name="card_mode_about">Card Appearances</string>
    <string name="card_mode_about_content">We recommand you to choose Default. But if you are tired of granting Accessibility Permission, you can choose Compaty to avoid granting Permission</string>
    <string name="floatwindow_alpha">Float Window Alpha ( Default 100 )</string>
    <string name="floatwindow_color">Float Window Backgound Color</string>
    <string name="setting_qr">QR Setting</string>
    <string name="qr_bg">QR Backgound</string>
    <string name="qr_bg_content">Costom your QR backgound</string>
    <string name="qr_dot">QR dot</string>
    <string name="qr_dot_content">Use dot instead of square when generating</string>
    <string name="nav_botton_helper">Please reenable Accessibility Permission to apply</string>
    <string name="setting_disable_ads">Disable Ads</string>
    <string name="setting_disable_ads_sub">Disable all build-in ads</string>
    <string name="setting_disable_ads_dialog_title">Do you know?</string>
    <string name="help_1_title">How to use?</string>
    <string name="help_1_content">After starting the service, you can do anything as normal. However, the Paste Service
        will mark down evry words when you copy. And when you want to paste from history, you can popup the floatwindow
        and find the memory. And finally, long-pressing to copy. Also, we provide something else. You can try to copy a
        color ( like #768955 or something ), the Paste app will automatically render the card\'s background to the color
        you copied. You can also try to click the card and you can edit the card\'s content anytime.
    </string>
    <string name="help_2_title">Assist App is not working?</string>
    <string name="help_2_content">This function is working in most of the AOSP like ROM. However, if it wont work in your ROM, maybe your ROM block it.If you are AOSP like Rom, please check if there is a setting like \'Long pressing to do \'.If it do ,please change it to open \'Assist App\' or just simply change it to Paste\'s shortcut. If you are running MIUI</string>
    <string name="help_3_title">How to keep Paste service?</string>
    <string name="help_3_content">Paste has a consummate back service logic. All core methods and functions are written
        in service. Paste\'s interface is only made to set settings, and you can finish these activities a if you want.
        So in order to keep service, you just need to start Paste service and make sure Paste is in the 3-rd part
        guarding app's whitelist.(eg. Greenify)
    </string>
    <string name="help_4_title">How to use some special functions?</string>
    <string name="help_4_content">Appending mode: press the button on Paste float window to enable it. After enabling
        it, Paste will take over Android clipboard manager and nothing will save to clipboard until you disable it. And
        all text you copied during this period of time will append together and be sent to your clipboard. \n\nLock
        mode: press the button on Paste float window to enable it. After enabling it, Paste will lock currently Android
        clipboard, nothing will be saved to clipboard during this period of time. \n\nUniversal copy: After you grant
        Accessibility Permission to Paste, you can press the button on Paste float window to enable universal copy.you
        can click any text on the screen to copy.
    </string>
    <string name="help_5_title">What is Regex Protection?</string>
    <string name="help_5_content">Some applications will regularly send code to the Android clipboard to promote one of
        their products. This may seem harmless, but sometimes our clipboard may just store important information. Regex
        Protection is born for this purpose. Add regex to filter out some regular information to keep the clean
        clipboard.
    </string>
</resources>