<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
    </group>

    <item android:title="@string/other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_help_outline_black_24dp"
                    android:title="@string/nav_about" />
                <item
                    android:id="@+id/nav_bill"
                    android:icon="@drawable/ic_monetization_on_black_24dp"
                    android:title="@string/nav_billing" />
            </group>
        </menu>
    </item>
</menu>