<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:background="@color/colorGreyBG">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:stateListAnimator="@animator/item_raise"
            app:cardCornerRadius="2dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <LinearLayout
                        android:id="@+id/help_1_title_view"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_marginLeft="16dp"
                            android:fontFamily="@font/product_sans_regular"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/help_1_title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/colorBlack"
                            android:textSize="17sp"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="end">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:gravity="center"
                            android:src="@drawable/ic_keyboard_arrow_down_black_24dp" />
                    </LinearLayout>
                </LinearLayout>

                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                    android:id="@+id/help_1_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ael_expanded="true"
                    app:ael_interpolator="fastOutSlowIn"
                    app:ael_orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:fontFamily="@font/product_sans_regular"
                            android:layout_marginTop="@dimen/air_baseline_half"
                            android:lineSpacingExtra="2dp"
                            android:text="@string/help_1_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="?android:textColorSecondary"/>

                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:stateListAnimator="@animator/item_raise"
            app:cardCornerRadius="2dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <LinearLayout
                        android:id="@+id/help_2_title_view"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_marginStart="16dp"
                            android:fontFamily="@font/product_sans_regular"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/help_2_title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/colorBlack"
                            android:textSize="17sp"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="end">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:gravity="center"
                            android:src="@drawable/ic_keyboard_arrow_down_black_24dp" />
                    </LinearLayout>
                </LinearLayout>

                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                    android:id="@+id/help_2_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ael_expanded="false"
                    app:ael_interpolator="fastOutSlowIn"
                    app:ael_orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:fontFamily="@font/product_sans_regular"
                            android:layout_marginTop="@dimen/air_baseline_half"
                            android:lineSpacingExtra="2dp"
                            android:text="@string/help_2_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="?android:textColorSecondary"/>

                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:stateListAnimator="@animator/item_raise"
                app:cardCornerRadius="2dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                <LinearLayout
                        android:id="@+id/help_3_title_view"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_marginStart="16dp"
                            android:fontFamily="@font/product_sans_regular"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/help_3_title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/colorBlack"
                            android:textSize="17sp"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="end">

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="16dp"
                                android:gravity="center"
                                android:src="@drawable/ic_keyboard_arrow_down_black_24dp"/>
                    </LinearLayout>
                </LinearLayout>

                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                        android:id="@+id/help_3_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ael_expanded="false"
                        app:ael_interpolator="fastOutSlowIn"
                        app:ael_orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:fontFamily="@font/product_sans_regular"
                            android:layout_marginTop="@dimen/air_baseline_half"
                            android:text="@string/help_3_content"
                            android:lineSpacingExtra="2dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="?android:textColorSecondary"/>

                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:stateListAnimator="@animator/item_raise"
                app:cardCornerRadius="2dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                <LinearLayout
                        android:id="@+id/help_4_title_view"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_marginStart="16dp"
                            android:fontFamily="@font/product_sans_regular"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/help_4_title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/colorBlack"
                            android:textSize="17sp"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="end">

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="16dp"
                                android:gravity="center"
                                android:src="@drawable/ic_keyboard_arrow_down_black_24dp"/>
                    </LinearLayout>
                </LinearLayout>

                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                        android:id="@+id/help_4_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ael_expanded="false"
                        app:ael_interpolator="fastOutSlowIn"
                        app:ael_orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:fontFamily="@font/product_sans_regular"
                            android:layout_marginTop="@dimen/air_baseline_half"
                            android:text="@string/help_4_content"
                            android:lineSpacingExtra="2dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="?android:textColorSecondary"/>

                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:stateListAnimator="@animator/item_raise"
                app:cardCornerRadius="2dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                <LinearLayout
                        android:id="@+id/help_5_title_view"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_marginStart="16dp"
                            android:fontFamily="@font/product_sans_regular"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/help_5_title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/colorBlack"
                            android:textSize="17sp"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="end">

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="16dp"
                                android:gravity="center"
                                android:src="@drawable/ic_keyboard_arrow_down_black_24dp"/>
                    </LinearLayout>
                </LinearLayout>

                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                        android:id="@+id/help_5_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ael_expanded="false"
                        app:ael_interpolator="fastOutSlowIn"
                        app:ael_orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:fontFamily="@font/product_sans_regular"
                            android:layout_marginTop="@dimen/air_baseline_half"
                            android:text="@string/help_5_content"
                            android:lineSpacingExtra="2dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="?android:textColorSecondary"/>

                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>